fix: adjust portfolio grid gap

--- a/singolo2.css
+++ b/singolo2.css
@@ -312,14 +312,21 @@ header a {
 
 .portfolio {
   background-color: #2d303a;
-  padding: 62px 0 61px 0;
+  padding: 62px 0 66px 0;
   border-bottom: 6px solid #323746;
 }
 .portfolio-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
-  grid-template-rows: repeat(auto-fit, 189px);
-  grid-gap: 16px 20px;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-rows: repeat(auto-fit, 187px);
+  grid-gap: 20px;
+
+}
+.portfolio-grid__item {
+  overflow: hidden;
+  height: 187px;
+  padding: 0;
+  margin: 0;
 }
 .portfolio-tags {
   padding-bottom: 21px;
